tests/ui/parser/trait-bounds-not-on-impl.stderr
error: expected a trait, found type
  --> $DIR/trait-bounds-not-on-impl.rs:5:6
   |
LL | impl Foo + Owned for Bar {}
   |      ^^^^^^^^^^^

error: aborting due to previous error

